2003-01-11  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/signalutils.{cc,h} (AutoConnection): New utility class that
	breaks the previous connection on assignment, and also remembers the
	blocked state of the connection permanently.

	(ScopedBlock): Use Util::AutoConnection instead of SigC::Connection.

	* src/filetree.{cc,h}: Use AutoConnection to manage the connection
	handles of the currently selected buffer.

	(on_selection_changed): Thanks to AutoConnection, we can now
	extinguish a fair bit of error-prone code.

2003-01-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Require automake >= 1.7.
	* configure.ac: ditto.

2003-01-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedPtr<>::swap): Implement.

2003-01-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_hide): For safety, transfer ownership of
	the preferences and about dialogs into local variables, rather than
	invoking hide() to delete them.  That way delete won't be called
	before hide() actually returned.

	(on_about_dialog_hide): Don't use std::auto_ptr<>::reset() but
	transfer ownership into local variables.  I had a look at the
	libstdc++-v3 headers and it gave me the creeps -- reset() deletes
	_before_ assigning the new pointer.

	(on_pref_dialog_hide): ditto.

2003-01-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (error_pixbuf_): Get rid of this silly cache,
	since it became useless a while ago.

2003-01-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (SelectableLabel): Add accessibility hints.
	(ContributorBox): Likewise, and also improve the widget arrangement
	if the dialog gets resized.

2002-12-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h}: Get rid of the menubar_handle_ and
	toolbar_handle_ data members.  We don't need to keep them around
	anymore since the config option to hide one or the other is gone.

2002-12-30  Daniel Elstner  <daniel.elstner@gmx.net>
